# silkyemu

./: CMakeLists.txt  README.md  controllerconfig.ui  corefetcher.cpp  corefetcher.h  corefetcher.ui  mainwindow.ui
